--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.1.3",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "pdf-lib": "^1.17.1",
