--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.1.3",
+    "canvas-to-svg": "^1.0.3",
     "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.11",
     "jspdf": "^2.5.1",
     "pdf-lib": "^1.17.1",
     "qrcode.react": "^3.1.0",
@@ -15,6 +18,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-svgmt": "^2.0.2",
+    "react-to-pdf": "^1.0.1",
+    "svg-to-png": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
