--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "canvas-to-svg": "^1.0.3",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jsqr": "^1.4.0",
     "pdf-lib": "^1.17.1",
+    "qrcode-generator": "^1.4.4",
+    "qrcode-svg": "^1.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
